--- a/index.html
+++ b/index.html
@@ -23,7 +23,36 @@
 </head>
 
 <body>
-  <div class="grid-wrapper">
+  <div class="grid-container" aria-hidden="true">
+    <div class="grid" aria-hidden="true">
+
+      <div class="grid__item grid__item--left grid__item--topleft">
+        <div class="inner__item inner__item--topleft">
+        </div>
+      </div>
+
+      <div class="grid__item grid__item--right grid__item--topright">
+        <div class="inner__item inner__item--topright">
+        </div>
+      </div>
+
+      <div class="grid__item grid__item--left grid__item--bottomleft">
+        <div class="inner__item inner__item--bottomleft">
+        </div>
+      </div>
+
+      <div class="grid__item grid__item--right grid__item--bottomright">
+        <div class="inner__item inner__item--bottomright">
+        </div>
+      </div>
+
+      <div class="grid__item--center">
+        <img src="" alt="">
+      </div>
+
+    </div>
+  </div>
+  <!--<div class="grid-wrapper">
     <div class="grid-row">
       <div class="square-wrapper">
         <div class="square red">
@@ -48,7 +77,7 @@
   <div class="center-wrapper">
     <div class = "purple">
     </div>
-  </div>
+  </div>-->
 </body>
 
 </html>
